tests/unit-fail-compilation/j061c.c.ref
j061c.c:1:1: error: Structs must contain a named member.
  Undefined behavior (UB-CDT1). See C11 sec. 6.7.2.1:8, J.2:1 item 61
Translation failed (config dumped). Run kcc -d j061c.c to see commands run.
